# ece5532_project_ideas

audibot_acc/: CMakeLists.txt  package.xml
audibot_acc/cfg/: HoughTransform.cfg
audibot_acc/launch/: run_simulation.launch
audibot_acc/src/: PinholeGeometry.cpp  PinholeGeometry.hpp  audibot_acc.cpp  audiobot_scan.cpp  gps_example.cpp
